--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moikas/parity-mcp",
+  "name": "@moikas/fork-parity-mcp",
   "version": "1.0.0",
   "description": "MCP server for tracking fork parity with upstream repositories",
   "type": "module",
