--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   "author": "moikas",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/moikas/parity-mcp.git"
+    "url": "git+https://github.com/moikas-code/fork-parity-mcp.git"
   },
   "bugs": {
-    "url": "https://github.com/moikas/parity-mcp/issues"
+    "url": "https://github.com/moikas-code/fork-parity-mcp/issues"
   },
-  "homepage": "https://github.com/moikas/parity-mcp#readme",
+  "homepage": "https://github.com/moikas-code/fork-parity-mcp#readme",
   "files": [
     "fork-parity-server.js",
     "README.md",
